--- a/guessingGame/index/page2.html
+++ b/guessingGame/index/page2.html
@@ -13,6 +13,6 @@
     <button onclick="submit()">Submit</button>
     <h1 id="res"></h1>
     <label id="icon"></label>
-    <script src="index.js"></script>
+    <script src="../index.js"></script>
 </body>
 </html>
